--- a/index.css
+++ b/index.css
@@ -26,6 +26,9 @@
 .bg-primary {
   background-color: var(--bg-primary) !important;
 }
+.bg-secondary {
+  background-color: var(--bg-secondary) !important;
+}
 
 .bg-dark {
   background-color: var(--primary) !important;
