--- a/index.css
+++ b/index.css
@@ -54,3 +54,19 @@ main {
 header {
   height: 30vh;
 }
+
+.scroll-top-top {
+  position: fixed;
+
+  width: 50px;
+  height: 50px;
+
+  /* visibility: hidden; */
+
+  bottom: 40px;
+  right: 40px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
