added weather forecast

--- a/index.css
+++ b/index.css
@@ -35,7 +35,8 @@
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-weight: bold;
 }
 
@@ -69,4 +70,15 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.weather-forecast-box p {
+  margin: 0;
+}
+
+/* Stilizari pentru mobile */
+@media (max-width: 576px) {
+  .weather-forecast-box .real-feel {
+    display: none;
+  }
 }
